--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,6 +6,7 @@
  */
 
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap");
+@import "colorVariables";
 @import "functions";
 @import "variables";
 @import "mixins";
@@ -14,6 +15,7 @@
 @import "type";
 @import "images";
 @import "code";
+@import "container-grid";
 @import "grid";
 @import "tables";
 @import "forms";
