--- a/src/assets/scss/_colorVariables.scss
+++ b/src/assets/scss/_colorVariables.scss
@@ -11,12 +11,12 @@ $gray-900: #152c5b !default;
 $black: #000 !default;
 
 $blue: #007bff !default;
-$indigo: #3252df !default;
+$indigo: #3252DF !default;
 $purple: #6f42c1 !default;
-$pink: #ff498b !default;
-$red: #e74c3c !default;
+$pink: #FF498B !default;
+$red: #E74C3C !default;
 $orange: #fd7e14 !default;
-$yellow: #ffcc47 !default;
+$yellow: #FFCC47 !default;
 $green: #28a745 !default;
-$teal: #1abc9c !default;
+$teal: #1ABC9C !default;
 $cyan: #17a2b8 !default;
