--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -129,7 +129,7 @@ fieldset:disabled a.btn {
 //
 
 .btn-block {
-  display: block;
+  display: flex;
   width: 100%;
 
   // Vertically space out multiple block buttons
